SAK-51427 LTI refactor numeric conversion routines and enhance unit tests (#13660)